--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -21,6 +21,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: 'true'
 
     - name: Install Dependencies
       run: sudo apt-get install -y libboost-all-dev libboost-iostreams-dev libboost-test-dev libboost-filesystem-dev libstxxl-dev
