--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,7 +25,7 @@ jobs:
         submodules: 'true'
 
     - name: Install Dependencies
-      run: sudo apt-get install -y libboost-all-dev libboost-iostreams-dev libboost-test-dev libboost-filesystem-dev libstxxl-dev
+      run: sudo apt-get install -y libboost-all-dev libboost-iostreams-dev libboost-test-dev libstxxl-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
